Добавил Flyway Добавил две таблицы images Сделал Securiry, Role class, Permissiom class Настроил аутефикацию, шифр пароли и токены для авторизации.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -6,7 +6,9 @@ plugins {
 
 group = 'com.3D-Model_Market.project'
 version = '1.0.0'
-sourceCompatibility = '21'
+
+sourceSets.main.resources.srcDir 'src/main/resources'
+
 
 repositories {
     mavenCentral()
