--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     implementation 'org.mapstruct:mapstruct:1.5.4.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.4.Final'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
     implementation 'io.jsonwebtoken:jjwt:0.12.1'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
