Сделал backup,wait-for-it.sh и хранение data

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 
   flyway:
     enabled: true
-    locations: classpath:/flyway/sql
+    locations: classpath:db/migration
     baseline-on-migrate: true
 
   jpa:
