--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /app
 COPY . .
 
 RUN chmod +x ./gradlew
-
 RUN ./gradlew clean bootJar --no-daemon
 
 FROM openjdk:21-jdk-slim
@@ -14,4 +13,12 @@ WORKDIR /app
 
 COPY --from=builder /app/build/libs/*.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
+
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
+    && chmod +x /usr/local/bin/wait-for-it.sh
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+CMD ["java", "-jar", "/app/app.jar"]
