--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,15 @@ COPY . .
 RUN yarn build
 
 FROM nginx:alpine
+
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
+
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
+    && chmod +x /usr/local/bin/wait-for-it.sh
+
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+CMD ["nginx", "-g", "daemon off;"]
