--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,10 +10,8 @@ RUN yarn build
 FROM nginx:alpine
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
 
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
-    && chmod +x /usr/local/bin/wait-for-it.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
