--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,12 +12,9 @@ FROM openjdk:21-jdk-slim
 WORKDIR /app
 
 COPY --from=builder /app/build/libs/*.jar app.jar
-
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
 
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
-    && chmod +x /usr/local/bin/wait-for-it.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 ENTRYPOINT ["docker-entrypoint.sh"]
 
