--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -9,6 +9,9 @@ version = '1.0.0'
 
 sourceSets.main.resources.srcDir 'src/main/resources'
 
+tasks.named("processResources") {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 
 repositories {
     mavenCentral()
@@ -16,26 +19,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    implementation 'org.mapstruct:mapstruct:1.5.4.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.4.Final'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
-
     implementation 'io.jsonwebtoken:jjwt:0.12.1'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
-
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
+    implementation 'org.mapstruct:mapstruct:1.5.4.Final'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.security:spring-security-crypto'
+
+    implementation 'org.jetbrains:annotations:24.0.1'
+
+    runtimeOnly 'org.postgresql:postgresql'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.4.Final'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 }
 
