--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "punycode": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "vite": "^5.0.0"
+    "react-router-dom": "^7.1.1",
+    "vite": "^6.0.7"
   },
   "devDependencies": {
-    "vite-plugin-svgr": "^3.0.0"
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
