--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,5 +16,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   app:
-    jwtSecret: "secret-key"
+    jwtSecret: "01234567890123456789012345678901"
     jwtExpirationInMs: 86400000
